<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#009800"    >
    tools:context=".BidActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:fillViewport="true" >

        <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bidding_board"
                android:textSize="16sp"
                android:id="@+id/textView"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bidding_declarer"
                android:textSize="16sp"
                android:id="@+id/textView2"
                android:layout_column="3"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/declarer_west"
                android:textSize="16sp"
                android:id="@+id/textView3"

                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/declarer_north"
                android:textSize="16sp"
                android:id="@+id/textView4"

                android:gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/declarer_east"
                android:textSize="16sp"
                android:id="@+id/textView5"

                android:gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/declarer_south"
                android:textSize="16sp"
                android:id="@+id/textView6"

                android:gravity="center"/>
            </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="fill_vertical"
            ></TableRow>

        </TableLayout>
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:layout_alignParentBottom="true">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1C"
                    android:textSize="16sp"
                    android:id="@+id/textView7"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1D"
                    android:textSize="16sp"
                    android:id="@+id/textView8"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1H"
                    android:textSize="16sp"
                    android:id="@+id/textView9"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1S"
                    android:textSize="16sp"
                    android:id="@+id/textView10"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1NT"
                    android:textSize="16sp"
                    android:id="@+id/textView11"
                    />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2C"
                    android:textSize="16sp"
                    android:id="@+id/textView12"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2D"
                    android:textSize="16sp"
                    android:id="@+id/textView13"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2H"
                    android:textSize="16sp"
                    android:id="@+id/textView14"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2S"
                    android:textSize="16sp"
                    android:id="@+id/textView15"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2NT"
                    android:textSize="16sp"
                    android:id="@+id/textView16"
                    />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3C"
                    android:textSize="16sp"
                    android:id="@+id/textView17"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3D"
                    android:textSize="16sp"
                    android:id="@+id/textView18"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3H"
                    android:textSize="16sp"
                    android:id="@+id/textView19"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3S"
                    android:textSize="16sp"
                    android:id="@+id/textView20"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3NT"
                    android:textSize="16sp"
                    android:id="@+id/textView21"
                    />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5C"
                    android:textSize="16sp"
                    android:id="@+id/textView27"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5D"
                    android:textSize="16sp"
                    android:id="@+id/textView28"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5H"
                    android:textSize="16sp"
                    android:id="@+id/textView29"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5S"
                    android:textSize="16sp"
                    android:id="@+id/textView30"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5NT"
                    android:textSize="16sp"
                    android:id="@+id/textView31"
                    />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6C"
                    android:textSize="16sp"
                    android:id="@+id/textView32"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6D"
                    android:textSize="16sp"
                    android:id="@+id/textView33"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6H"
                    android:textSize="16sp"
                    android:id="@+id/textView34"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6S"
                    android:textSize="16sp"
                    android:id="@+id/textView35"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6NT"
                    android:textSize="16sp"
                    android:id="@+id/textView36"
                    />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7C"
                    android:textSize="16sp"
                    android:id="@+id/textView37"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7D"
                    android:textSize="16sp"
                    android:id="@+id/textView38"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7H"
                    android:textSize="16sp"
                    android:id="@+id/textView39"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7S"
                    android:textSize="16sp"
                    android:id="@+id/textView40"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7NT"
                    android:textSize="16sp"
                    android:id="@+id/textView41"
                    />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pass"
                    android:textSize="16sp"
                    android:id="@+id/textView42"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="D"
                    android:textSize="16sp"
                    android:id="@+id/textView43"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RD"
                    android:textSize="16sp"
                    android:id="@+id/textView44"
                    />
            </TableRow>
            </TableLayout>
    </RelativeLayout>

</RelativeLayout>
